fixed video playback

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,27 +1,42 @@
 cmake_minimum_required(VERSION 3.16)
-project(aniplay LANGUAGES CXX)
+project(aniplay VERSION 0.1 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# Find dependencies
-find_package(PkgConfig REQUIRED)
+# Find OpenGL
 find_package(OpenGL REQUIRED)
 
-pkg_check_modules(SDL2 REQUIRED sdl2)
+# Find GLFW
+find_package(PkgConfig REQUIRED)
+pkg_check_modules(GLFW REQUIRED glfw3)
+
+# Find mpv
 pkg_check_modules(MPV REQUIRED mpv)
 
+# Add include directories
 include_directories(
-    ${SDL2_INCLUDE_DIRS}
+    ${GLFW_INCLUDE_DIRS}
     ${MPV_INCLUDE_DIRS}
 )
 
-add_executable(aniplay
+# Collect sources
+set(SOURCES
     src/main.cpp
 )
 
-target_link_libraries(aniplay
-    ${SDL2_LIBRARIES}
-    ${MPV_LIBRARIES}
+# Create executable
+add_executable(${PROJECT_NAME} ${SOURCES})
+
+# Link against OpenGL, GLFW, and mpv
+target_link_libraries(${PROJECT_NAME}
     OpenGL::GL
+    ${GLFW_LIBRARIES}
+    ${MPV_LIBRARIES}
 )
+
+# Install target
+install(TARGETS ${PROJECT_NAME} DESTINATION bin)
+
+# License notice
+message(STATUS "aniplay is licensed under the GNU GPL v3")
