--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,6 @@ set(CMAKE_CXX_STANDARD 17)
 find_package(PkgConfig REQUIRED)
 pkg_check_modules(MPV REQUIRED mpv)
 
-add_library(aniplay SHARED src/aniplay.cpp)
+add_library(aniplay SHARED backend/mpvplayer.cpp)
 target_include_directories(aniplay PRIVATE ${MPV_INCLUDE_DIRS})
 target_link_libraries(aniplay ${MPV_LIBRARIES})
