--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "aniplay",
-  "version": "1.0.0",
-  "description": "A professional video player with wide format support",
+  "version": "alpha-1.0.0",
+  "description": "Professional anime player with MyAnimeList integration and library management",
   "main": "src/main/index.js",
   "scripts": {
     "start": "electron .",
@@ -11,17 +11,20 @@
     "lint": "eslint src/",
     "package-linux": "electron-builder --linux"
   },
-  "keywords": ["video", "player", "electron", "mpv", "anime"],
-  "author": "Your Name",
-  "license": "MIT",
+  "keywords": ["anime", "player", "electron", "mpv", "myanimelist", "library"],
+  "author": "Ahmed Naisam Mohamed",
+  "license": "GPL-3.0-only",
   "devDependencies": {
-    "electron": "^27.0.0",
+    "electron": "^27.3.11",
     "electron-builder": "^24.6.4",
     "jest": "^29.7.0",
     "eslint": "^8.50.0"
   },
   "dependencies": {
-    "node-mpv": "^2.3.0"
+    "axios": "^1.6.0",
+    "cheerio": "^1.0.0-rc.12",
+    "fuse.js": "^7.0.0",
+    "sqlite3": "^5.1.6"
   },
   "build": {
     "appId": "com.yourname.aniplay",
@@ -35,6 +38,12 @@
         "deb",
         "rpm"
       ]
-    }
+    },
+    "files": [
+      "src/**/*",
+      "assets/**/*",
+      "data/**/*",
+      "node_modules/**/*"
+    ]
   }
 }
