--- a/package.json
+++ b/package.json
@@ -1,49 +1,23 @@
 {
   "name": "aniplay",
-  "version": "alpha-1.0.0",
+  "version": "1.0.0",
   "description": "Professional anime player with MyAnimeList integration and library management",
   "main": "src/main/index.js",
   "scripts": {
     "start": "electron .",
     "dev": "electron . --development",
-    "build": "electron-builder",
-    "test": "jest",
-    "lint": "eslint src/",
-    "package-linux": "electron-builder --linux"
+    "build": "echo 'Build disabled for Node 12 compatibility'",
+    "package-linux": "echo 'Package disabled for Node 12 compatibility'"
   },
   "keywords": ["anime", "player", "electron", "mpv", "myanimelist", "library"],
-  "author": "Ahmed Naisam Mohamed",
-  "license": "GPL-3.0-only",
+  "author": "Naisam",
+  "license": "MIT",
   "devDependencies": {
-    "electron": "^27.3.11",
-    "electron-builder": "^24.6.4",
-    "jest": "^29.7.0",
-    "eslint": "^8.50.0"
+    "electron": "11.5.0"
   },
   "dependencies": {
-    "axios": "^1.6.0",
-    "cheerio": "^1.0.0-rc.12",
-    "fuse.js": "^7.0.0",
-    "sqlite3": "^5.1.6"
-  },
-  "build": {
-    "appId": "com.yourname.aniplay",
-    "productName": "AniPlay",
-    "directories": {
-      "output": "dist"
-    },
-    "linux": {
-      "target": [
-        "AppImage",
-        "deb",
-        "rpm"
-      ]
-    },
-    "files": [
-      "src/**/*",
-      "assets/**/*",
-      "data/**/*",
-      "node_modules/**/*"
-    ]
+    "cheerio": "1.0.0-rc.3",
+    "fuse.js": "6.4.6",
+    "sqlite3": "5.0.0"
   }
 }
